fix side navigation empty gap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -137,12 +137,12 @@ main .helper span {
 }
 .menu {
   background: #6FB4DA;
-  height: 100vh;
-  width: 100%;
-  //position: fixed;
-  // top: 0;
-  // left: 0;
-  //z-index: 5;
+  height: 100%;
+  width: 25%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 5;
   outline: none;
 }
 .menu .avatar {
